k8s/catalog-test-service/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: catalog-test-service

spec:
  type: NodePort

  selector:
    app: catalog-test-service

  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30020
